# math-lang

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-from-source-check.yml  build-release-binary.yml  cmake-multi-platform.yml
examples/: basic.mls  cosine-law.mls
src/: CMakeLists.txt  compiler.cpp  compiler.hpp  config.hpp.in  interpreter.cpp  interpreter.hpp  main.cpp  mathlib.hpp  runtime.cpp  runtime.hpp  utils.cpp  utils.hpp
src/runtime/: CMakeLists.txt  executor.cpp  frame.cpp  mathlib.hpp  memory.cpp  object.cpp  object.hpp  runtime.cpp  runtime.hpp  runtime_base.hpp
tests/: CMakeLists.txt  test_interpreter.cpp  testlib.hpp
